fixed MET-518 content is hidden under classification filter (footer)

--- a/ModelCatalogueCorePluginTestApp/grails-app/assets/stylesheets/modelcatalogue.less
+++ b/ModelCatalogueCorePluginTestApp/grails-app/assets/stylesheets/modelcatalogue.less
@@ -9,3 +9,7 @@ body {
   padding-top: 70px;
 }
 
+.container-main {
+  padding-bottom: 70px;
+}
+
